--- a/css/vse.css
+++ b/css/vse.css
@@ -6,3 +6,39 @@
     display: inline-block;
     color: #202020;
 }
+
+div.vse {
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+div.vse button {
+    width: 120px;
+    padding: 4px 2px;
+    margin: 2px 0;
+    border-radius: 2px;
+    cursor: pointer;
+    font-weight: normal;
+}
+
+div.vse table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+div.vse th {
+    padding: 8px;
+    text-align: right;
+}
+
+div.vse td {
+    padding: 8px;
+    text-align: left;
+}
+
+div.vse tr:hover {
+    background-color:#f5f5f5;
+}
