--- a/css/vse.css
+++ b/css/vse.css
@@ -42,3 +42,11 @@ div.vse td {
 div.vse tr:hover {
     background-color:#f5f5f5;
 }
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+    float: none;
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+    text-align: center; /* left/center/right */
+}
