--- a/css/vse.css
+++ b/css/vse.css
@@ -11,8 +11,7 @@ div.vse {
     border-radius: 5px;
     padding: 20px;
     text-align: center;
-    margin: auto;
-    margin-bottom: 10px;
+    margin: auto auto 10px;
 }
 
 div.vse button {
@@ -31,22 +30,48 @@ div.vse table {
 
 div.vse th {
     padding: 8px;
-    text-align: right;
+    text-align: center;
 }
 
 div.vse td {
     padding: 8px;
-    text-align: left;
+    text-align: center;
 }
 
 div.vse tr:hover {
     background-color:#f5f5f5;
 }
 
+#table_gpa_scales {
+    table-layout: fixed;
+ }
+
+#table_gpa_scales td, #table_gpa_scales th {
+    width: 50px;
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#table_gpa_scales tr:nth-child(even){background-color: #f2f2f2;}
+
+#table_gpa_scales tr:hover {background-color: #ddd;}
+
 .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
     float: none;
 }
 
 .ui-dialog .ui-dialog-buttonpane {
-    text-align: center; /* left/center/right */
+    text-align: center;
+}
+
+.ui-widget-overlay {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+ }
+
+.ui-front {
+    z-index: 100;
 }
